category put adn post ability gained